Added Disqus comments

--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,18 @@ markdown: kramdown
 gems:
   - jekyll-feed
   - jekyll-paginate
-  
+
+# Excludes  
 exclude:
   - Gemfile
   - Gemfile.lock
+  
+# Pagination
 paginate: 5
 paginate_path: "/blog/page:num/"
+
+# Disqus Comments
+disqus:
+    # Leave shortname blank to disable comments site-wide.
+    # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+    shortname: bakadigest
